--- a/sample/table.htm
+++ b/sample/table.htm
@@ -6,9 +6,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Handsontable Meta sample</title>
         <link rel="autdor" href="humans.txt">
+        <link rel="stylesheet" href="../node_modules/handsontable/dist/handsontable.full.min.css">
     </head>
     <body>
-
+        <div id="example"></div>
     </body>
-     <script src="../dist/handsontable-meta.min.js"></script>
+    <script src="../node_modules/handsontable/dist/handsontable.full.min.js"></script>
+    <script src="../dist/handsontable-meta.min.js"></script>
+    <script>
+    var data = [
+        ["", "Tesla", "Volvo", "Toyota", "Honda"],
+        ["2017", 10, 11, 12, 13],
+        ["2018", 20, 11, 14, 13],
+        ["2019", 30, 15, 12, 13]
+        ];
+
+        var container = document.getElementById('example');
+        var hot = new Handsontable(container, {
+        data: data,
+        rowHeaders: true,
+        colHeaders: true,
+        manualColumnResize: true,
+        manualRowResize: true,
+        contextMenu: true
+        });
+
+
+    </script>
 </html>
